--- a/package.json
+++ b/package.json
@@ -7,5 +7,16 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Engin Yüksel",
-  "license": "MIT"
+  "license": "MIT",
+  "dependencies": {
+    "body-parser": "^1.19.0",
+    "cheerio": "^1.0.0-rc.3",
+    "express": "^4.17.1",
+    "express-handlebars": "^5.0.0",
+    "formidable": "^1.2.2",
+    "got": "^11.4.0",
+    "mongodb": "^3.5.9",
+    "nodemailer": "^6.4.10"
+  },
+  "devDependencies": {}
 }
